Catch errors while loading dnn model with opencv; Refactored;